--- a/2. naloga.ipynb
+++ b/2. naloga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -120,14 +120,13 @@
        "[130 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import scipy.stats as staty\n",
-    "import statistics\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
@@ -255,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -278,6 +277,15 @@
       "Povprečje telesne temperature pri moških je 98.10461538461539°F (oz. 36.72478632478632°C), pri ženskah pa 98.39384615384614°F (oz. 36.885470085470075°C).Standardni odklon pri moških znaša 0.698755762326591°F (oz. -17.389580132040784°C), pri ženskah pa 0.7434877527313665°F (oz. -17.364729026260353°C).\n",
       "\n",
       " b) Za povprečji iz prejšnje točke določite 95% intervala zaupanja. \n",
+      "\n",
+      "Aproksimativna intervala zaupanja: \n",
+      " moški: (97.93474533444997°F, 98.2744854347808°F) \n",
+      " ženske: (98.21310159521335°F, 98.57459071247894°F)\n",
+      "Eksaktna intervala zaupanja: \n",
+      " moški: (97.93147218445704°F, 98.27775858477374°F) \n",
+      " ženske: (98.20961890918224°F, 98.57807339851004°F)\n",
+      "\n",
+      " c) Preizkusite domnevo, da imajo moški in ženske v povprečju enako telesno temperaturo. \n",
       "\n"
      ]
     }
@@ -286,6 +294,7 @@
     "print('\\n a) Ocenite povprečje in standardni odklon za telesno temperaturo posebej pri'\n",
     "    'moških in posebej pri ženskah. \\n')\n",
     "n = 65\n",
+    "alpha = 0.05\n",
     "moški = temperature[temperature['SPOL'] == 1]['TEMPERATURA']\n",
     "ženske = temperature[temperature['SPOL'] == 2]['TEMPERATURA']\n",
     "povprecje_moški = np.average(moški)\n",
@@ -300,13 +309,32 @@
     "                                                                           \n",
     "############################################################################################################\n",
     "print('\\n b) Za povprečji iz prejšnje točke določite 95% intervala zaupanja. \\n')\n",
-    "                                "
+    "normalna_inv = staty.norm.isf(alpha/2)\n",
+    "student_inv = staty.t.isf(alpha/2, n-1)\n",
+    "odstop_apr_moški = standardni_odklon_moški*normalna_inv/np.sqrt(n)\n",
+    "odstop_apr_ženske = standardni_odklon_ženske*normalna_inv/np.sqrt(n)\n",
+    "odstop_eks_moški = standardni_odklon_moški*student_inv/np.sqrt(n)\n",
+    "odstop_eks_ženske = standardni_odklon_ženske*student_inv/np.sqrt(n)\n",
+    "apr_moški_zg = povprecje_moški + odstop_apr_moški\n",
+    "apr_moški_sp = povprecje_moški - odstop_apr_moški\n",
+    "apr_ženske_zg = povprecje_ženske + odstop_apr_ženske\n",
+    "apr_ženske_sp = povprecje_ženske - odstop_apr_ženske\n",
+    "eks_moški_zg = povprecje_moški + odstop_eks_moški\n",
+    "eks_moški_sp = povprecje_moški - odstop_eks_moški\n",
+    "eks_ženske_zg = povprecje_ženske + odstop_eks_ženske\n",
+    "eks_ženske_sp = povprecje_ženske - odstop_eks_ženske\n",
+    "print('Aproksimativna intervala zaupanja: \\n moški: ({0}°F, {1}°F) \\n ženske: ({2}°F, {3}°F)'.format(\n",
+    "    apr_moški_sp, apr_moški_zg, apr_ženske_sp, apr_ženske_zg))\n",
+    "print('Eksaktna intervala zaupanja: \\n moški: ({0}°F, {1}°F) \\n ženske: ({2}°F, {3}°F)'.format(\n",
+    "    eks_moški_sp, eks_moški_zg, eks_ženske_sp, eks_ženske_zg))\n",
+    "############################################################################################################\n",
+    "print('\\n c) Preizkusite domnevo, da imajo moški in ženske v povprečju enako telesno temperaturo. \\n')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -320,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
