delal 2.a) v jupyterju, popravil stopinje celzija

--- a/2. naloga.ipynb
+++ b/2. naloga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "[130 rows x 3 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[130 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,17 +254,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pretvori(stopinje_fahrenheita):\n",
-    "    return 5*(stopinje_fahrenheita-32)/9"
+    "    return 5*(stopinje_fahrenheita-32)/9\n",
+    "def pretvori_std(stopinje_fahrenheita):\n",
+    "    return 5*(stopinje_fahrenheita)/9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +276,40 @@
       "\n",
       " a) Ocenite povprečje in standardni odklon za telesno temperaturo posebej primoških in posebej pri ženskah. \n",
       "\n",
-      "Povprečje telesne temperature pri moških je 98.10461538461539°F (oz. 36.72478632478632°C), pri ženskah pa 98.39384615384614°F (oz. 36.885470085470075°C).Standardni odklon pri moških znaša 0.698755762326591°F (oz. -17.389580132040784°C), pri ženskah pa 0.7434877527313665°F (oz. -17.364729026260353°C).\n",
+      "Povprečje telesne temperature pri moških je 98.10461538461539°F (oz. 36.72478632478632°C), pri ženskah pa 98.39384615384614°F (oz. 36.885470085470075°C).Standardni odklon pri moških znaša 0.698755762326591°F (oz. 0.388197645736995°C), pri ženskah pa 0.7434877527313665°F (oz. 0.4130487515174258°C).\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n a) Ocenite povprečje in standardni odklon za telesno temperaturo posebej pri'\n",
+    "    'moških in posebej pri ženskah. \\n')\n",
+    "n = 65\n",
+    "alpha = 0.05\n",
+    "moški = temperature[temperature['SPOL'] == 1]['TEMPERATURA']\n",
+    "ženske = temperature[temperature['SPOL'] == 2]['TEMPERATURA']\n",
+    "povp_m = np.average(moški)\n",
+    "povp_ž = np.average(ženske)\n",
+    "povp_mC= pretvori(povp_m)\n",
+    "povp_žC= pretvori(povp_ž)\n",
+    "std_m = np.sqrt((n/(n-1))*staty.moment(moški, 2))\n",
+    "std_ž = np.sqrt((n/(n-1))*staty.moment(ženske, 2))\n",
+    "std_mC = pretvori_std(std_m)\n",
+    "std_žC = pretvori_std(std_ž)\n",
+    "\n",
+    "print('Povprečje telesne temperature pri moških je {0}°F (oz. {1}°C), pri ženskah pa {2}°F (oz. {3}°C).'\n",
+    "      'Standardni odklon pri moških znaša {4}°F (oz. {5}°C), pri ženskah pa {6}°F (oz. {7}°C).'.format(povp_m,\n",
+    "    povp_mC, povp_ž, povp_žC, std_m, std_mC, std_ž, std_žC))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       " b) Za povprečji iz prejšnje točke določite 95% intervala zaupanja. \n",
       "\n",
@@ -291,23 +326,6 @@
     }
    ],
    "source": [
-    "print('\\n a) Ocenite povprečje in standardni odklon za telesno temperaturo posebej pri'\n",
-    "    'moških in posebej pri ženskah. \\n')\n",
-    "n = 65\n",
-    "alpha = 0.05\n",
-    "moški = temperature[temperature['SPOL'] == 1]['TEMPERATURA']\n",
-    "ženske = temperature[temperature['SPOL'] == 2]['TEMPERATURA']\n",
-    "povprecje_moški = np.average(moški)\n",
-    "povprecje_ženske = np.average(ženske)\n",
-    "standardni_odklon_moški = np.sqrt((n/(n-1))*staty.moment(moški, 2))\n",
-    "standardni_odklon_ženske = np.sqrt((n/(n-1))*staty.moment(ženske, 2))\n",
-    "\n",
-    "print('Povprečje telesne temperature pri moških je {0}°F (oz. {1}°C), pri ženskah pa {2}°F (oz. {3}°C).'\n",
-    "      'Standardni odklon pri moških znaša {4}°F (oz. {5}°C), pri ženskah pa {6}°F (oz. {7}°C).'.format(povprecje_moški,\n",
-    "    pretvori(povprecje_moški), povprecje_ženske, pretvori(povprecje_ženske), standardni_odklon_moški, \n",
-    "    pretvori(standardni_odklon_moški), standardni_odklon_ženske, pretvori(standardni_odklon_ženske)))\n",
-    "                                                                           \n",
-    "############################################################################################################\n",
     "print('\\n b) Za povprečji iz prejšnje točke določite 95% intervala zaupanja. \\n')\n",
     "normalna_inv = staty.norm.isf(alpha/2)\n",
     "student_inv = staty.t.isf(alpha/2, n-1)\n",
