--- a/2. naloga.ipynb
+++ b/2. naloga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "[130 rows x 3 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[130 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,8 +266,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -284,13 +286,12 @@
     "print('\\n a) Ocenite povprečje in standardni odklon za telesno temperaturo posebej pri'\n",
     "    'moških in posebej pri ženskah. \\n')\n",
     "n = 65\n",
-    "alpha = 0.05\n",
     "moški = temperature[temperature['SPOL'] == 1]['TEMPERATURA']\n",
     "ženske = temperature[temperature['SPOL'] == 2]['TEMPERATURA']\n",
     "povp_m = np.average(moški)\n",
     "povp_ž = np.average(ženske)\n",
-    "povp_mC= pretvori(povp_m)\n",
-    "povp_žC= pretvori(povp_ž)\n",
+    "povp_mC = pretvori(povp_m)\n",
+    "povp_žC = pretvori(povp_ž)\n",
     "std_m = np.sqrt((n/(n-1))*staty.moment(moški, 2))\n",
     "std_ž = np.sqrt((n/(n-1))*staty.moment(ženske, 2))\n",
     "std_mC = pretvori_std(std_m)\n",
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -314,11 +315,48 @@
       " b) Za povprečji iz prejšnje točke določite 95% intervala zaupanja. \n",
       "\n",
       "Aproksimativna intervala zaupanja: \n",
-      " moški: (97.93474533444997°F, 98.2744854347808°F) \n",
-      " ženske: (98.21310159521335°F, 98.57459071247894°F)\n",
+      " moški: (97.93474533444997°F, 98.2744854347808°F) oz. (36.63041407469443°C, 36.81915857487822°C)\n",
+      " ženske: (98.21310159521335°F, 98.57459071247894°F) oz. (36.785056441785194°C, 36.98588372915496°C)\n",
       "Eksaktna intervala zaupanja: \n",
-      " moški: (97.93147218445704°F, 98.27775858477374°F) \n",
-      " ženske: (98.20961890918224°F, 98.57807339851004°F)\n",
+      " moški: (97.93147218445704°F, 98.27775858477374°F) oz. (36.628595658031685°C, 36.82097699154096°C)\n",
+      " ženske: (98.20961890918224°F, 98.57807339851004°F) oz. (36.783121616212355°C, 36.987818554727795°C)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n b) Za povprečji iz prejšnje točke določite 95% intervala zaupanja. \\n')\n",
+    "alpha = 0.05\n",
+    "normalna_inv = staty.norm.isf(alpha/2)\n",
+    "student_inv = staty.t.isf(alpha/2, n-1)\n",
+    "apr_m = std_m*normalna_inv/np.sqrt(n)\n",
+    "apr_ž = std_ž*normalna_inv/np.sqrt(n)\n",
+    "eks_m = std_m*student_inv/np.sqrt(n)\n",
+    "eks_ž = std_ž*student_inv/np.sqrt(n)\n",
+    "apr_m_zg = povp_m + apr_m\n",
+    "apr_m_sp = povp_m - apr_m\n",
+    "apr_ž_zg = povp_ž + apr_ž\n",
+    "apr_ž_sp = povp_ž - apr_ž\n",
+    "eks_m_zg = povp_m + eks_m\n",
+    "eks_m_sp = povp_m - eks_m\n",
+    "eks_ž_zg = povp_ž + eks_ž\n",
+    "eks_ž_sp = povp_ž - eks_ž\n",
+    "print('Aproksimativna intervala zaupanja: \\n moški: ({0}°F, {1}°F) oz. ({2}°C, {3}°C)'\n",
+    "      '\\n ženske: ({4}°F, {5}°F) oz. ({6}°C, {7}°C)'.format(apr_m_sp, apr_m_zg, pretvori(apr_m_sp), \n",
+    "        pretvori(apr_m_zg), apr_ž_sp, apr_ž_zg, pretvori(apr_ž_sp), pretvori(apr_ž_zg)))\n",
+    "print('Eksaktna intervala zaupanja: \\n moški: ({0}°F, {1}°F) oz. ({2}°C, {3}°C)'\n",
+    "      '\\n ženske: ({4}°F, {5}°F) oz. ({6}°C, {7}°C)'.format(eks_m_sp, eks_m_zg, pretvori(eks_m_sp), \n",
+    "        pretvori(eks_m_zg), eks_ž_sp, eks_ž_zg, pretvori(eks_ž_sp), pretvori(eks_ž_zg)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       " c) Preizkusite domnevo, da imajo moški in ženske v povprečju enako telesno temperaturo. \n",
       "\n"
@@ -326,26 +364,6 @@
     }
    ],
    "source": [
-    "print('\\n b) Za povprečji iz prejšnje točke določite 95% intervala zaupanja. \\n')\n",
-    "normalna_inv = staty.norm.isf(alpha/2)\n",
-    "student_inv = staty.t.isf(alpha/2, n-1)\n",
-    "odstop_apr_moški = standardni_odklon_moški*normalna_inv/np.sqrt(n)\n",
-    "odstop_apr_ženske = standardni_odklon_ženske*normalna_inv/np.sqrt(n)\n",
-    "odstop_eks_moški = standardni_odklon_moški*student_inv/np.sqrt(n)\n",
-    "odstop_eks_ženske = standardni_odklon_ženske*student_inv/np.sqrt(n)\n",
-    "apr_moški_zg = povprecje_moški + odstop_apr_moški\n",
-    "apr_moški_sp = povprecje_moški - odstop_apr_moški\n",
-    "apr_ženske_zg = povprecje_ženske + odstop_apr_ženske\n",
-    "apr_ženske_sp = povprecje_ženske - odstop_apr_ženske\n",
-    "eks_moški_zg = povprecje_moški + odstop_eks_moški\n",
-    "eks_moški_sp = povprecje_moški - odstop_eks_moški\n",
-    "eks_ženske_zg = povprecje_ženske + odstop_eks_ženske\n",
-    "eks_ženske_sp = povprecje_ženske - odstop_eks_ženske\n",
-    "print('Aproksimativna intervala zaupanja: \\n moški: ({0}°F, {1}°F) \\n ženske: ({2}°F, {3}°F)'.format(\n",
-    "    apr_moški_sp, apr_moški_zg, apr_ženske_sp, apr_ženske_zg))\n",
-    "print('Eksaktna intervala zaupanja: \\n moški: ({0}°F, {1}°F) \\n ženske: ({2}°F, {3}°F)'.format(\n",
-    "    eks_moški_sp, eks_moški_zg, eks_ženske_sp, eks_ženske_zg))\n",
-    "############################################################################################################\n",
     "print('\\n c) Preizkusite domnevo, da imajo moški in ženske v povprečju enako telesno temperaturo. \\n')"
    ]
   }
@@ -366,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
